--- a/out.html
+++ b/out.html
@@ -16,6 +16,12 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+<style>
+th {
+    position: sticky;
+    top: 0;
+}
+</style>
   </head>
   <body>
     <h1>Livres réimprimés chez Lulu</h1>
@@ -24,129 +30,27 @@
         <div class="card-body">
             <h5 class="card-title">Comment lire le tableau</h5>
             <p class="card-text">
-            Ce tableau contient tous les livres réimprimés chez Lulu. Les lignes en bleu indiquent que le titre contient plusieurs volumes indiqués en-dessous. Le prix et le nombre de pages indiqués ne sont que l'addition des volumes qu'il contient. Attention, certains titres contiennent eux-mêmes d'autres titres contenant plusieurs volumes. Par exemple, la Bible de Fillion est divisée en Ancien Testament et Nouveau Testament, lequel est divisé en évangiles, etc.
+            Ce tableau contient tous les livres réimprimés chez Lulu. Les lignes en bleu indiquent que le titre contient plusieurs volumes indiqués en-dessous. Le prix et le nombre de pages indiqués ne sont que l'addition des volumes qu'il contient. Attention, certains titres contiennent eux-mêmes d'autres titres contenant plusieurs volumes. Par exemple, la Bible de Fillion est divisée en Ancien Testament et Nouveau Testament, lequel est divisé en évangiles, etc. <br>
             Toute suggestion ou remarque est bienvenue.
             </p>
         </div>
     </div>
+    <div class="alert alert-warning" role="alert">
+        Dernière modification : 15/05/2022
+    </div>
     
 <table class="table table-hover">
     <thead>
-        <tr>
+        <tr class="table-dark">
             <th scope="col" >Titre</th>
             <th scope="col" >Auteur</th>
             <th scope="col" >Format</th>
             <th scope="col" >Langue</th>
-            <th scope="col" >Prix</th>
+            <th scope="col" >Prix (€)</th>
             <th scope="col" >Pages</th>
         </tr>
     </thead>
-    <tbody><tr class="table-info"><td>Traité d'harmonie</td>
-<td>Kœchlin</td>
-<td>/</td>
-<td>/</td>
-<td>19.37</td>
-<td>470</td>
-</tr>
-<tr class='table-light'><td>    Traité d'Harmonie - Tome 1</td>
-<td>Kœchlin</td>
-<td>A4</td>
-<td>Français</td>
-<td>8.89</td>
-<td>197</td>
-</tr>
-<tr class='table-light'><td>    Traité d'harmonie - Tome 2</td>
-<td>Kœchlin</td>
-<td>A4</td>
-<td>Français</td>
-<td>10.48</td>
-<td>273</td>
-</tr>
-<tr class="table-info"><td>Catena Aurea</td>
-<td>Saint Thomas d'Aquin</td>
-<td>/</td>
-<td>/</td>
-<td>82.48</td>
-<td>4005</td>
-</tr>
-<tr class='table-light'><td>    Catena Aurea - 6</td>
-<td>Saint Thomas d'Aquin</td>
-<td>A5</td>
-<td>Latin</td>
-<td>11.36</td>
-<td>566</td>
-</tr>
-<tr class='table-light'><td>    Catena Aurea - 2</td>
-<td>Saint Thomas d'Aquin</td>
-<td>A5</td>
-<td>Latin</td>
-<td>10.72</td>
-<td>526</td>
-</tr>
-<tr class='table-light'><td>    Catena Aurea - 3</td>
-<td>Saint Thomas d'Aquin</td>
-<td>A5</td>
-<td>Latin</td>
-<td>9.56</td>
-<td>454</td>
-</tr>
-<tr class='table-light'><td>    Catena Aurea - 5</td>
-<td>Saint Thomas d'Aquin</td>
-<td>A5</td>
-<td>Latin</td>
-<td>10.48</td>
-<td>511</td>
-</tr>
-<tr class='table-light'><td>    Catena Aurea - 4</td>
-<td>Saint Thomas d'Aquin</td>
-<td>A5</td>
-<td>Latin</td>
-<td>9.79</td>
-<td>468</td>
-</tr>
-<tr class='table-light'><td>    Catena Aurea - 8</td>
-<td>Saint Thomas d'Aquin</td>
-<td>A5</td>
-<td>Latin</td>
-<td>9.8</td>
-<td>469</td>
-</tr>
-<tr class='table-light'><td>    Catena Aurea 1</td>
-<td>Saint Thomas d'Aquin</td>
-<td>A5</td>
-<td>Latin</td>
-<td>10.52</td>
-<td>514</td>
-</tr>
-<tr class='table-light'><td>    Catena Aurea - 7</td>
-<td>Saint Thomas d'Aquin</td>
-<td>A5</td>
-<td>Latin</td>
-<td>10.25</td>
-<td>497</td>
-</tr>
-<tr class='table-light'><td>Traité de Contrepoint</td>
-<td>Gallon & Bitsch</td>
-<td>A5</td>
-<td>Français</td>
-<td>4.19</td>
-<td>118</td>
-</tr>
-<tr class='table-light'><td>Traité d'improvisation</td>
-<td>Marcel Dupré</td>
-<td>A4</td>
-<td>Français</td>
-<td>5.57</td>
-<td>144</td>
-</tr>
-<tr class='table-light'><td>Traité de la Fugue</td>
-<td>Gedalge</td>
-<td>A4</td>
-<td>Français</td>
-<td>10.76</td>
-<td>391</td>
-</tr>
-<tr class="table-info"><td>Apocryphes</td>
+    <tbody><tr class="table-info"><td>Apocryphes</td>
 <td>Sacy</td>
 <td>/</td>
 <td>/</td>
@@ -167,145 +71,68 @@
 <td>10.3</td>
 <td>500</td>
 </tr>
-<tr class="table-info"><td>Commentaria in Sacram Scripturam</td>
-<td>Cornelius a Lapide</td>
+<tr class="table-info"><td>Catena Aurea</td>
+<td>Saint Thomas d'Aquin</td>
 <td>/</td>
 <td>/</td>
-<td>103.71</td>
-<td>3586</td>
+<td>82.48</td>
+<td>4005</td>
 </tr>
-<tr class="table-info"><td>    In Pentateuchum</td>
-<td>Cornelius a Lapide</td>
-<td>/</td>
-<td>/</td>
-<td>45.76</td>
-<td>1555</td>
-</tr>
-<tr class='table-light'><td>        3 - In Numeros, Leviticum et Deuteronomum</td>
-<td>Cornelius a Lapide</td>
-<td>A4</td>
-<td>Latin</td>
-<td>15.91</td>
-<td>636</td>
-</tr>
-<tr class='table-light'><td>        2 - In Exodum</td>
-<td>Cornelius a Lapide</td>
-<td>A4</td>
-<td>Latin</td>
-<td>9.73</td>
-<td>342</td>
-</tr>
-<tr class='table-light'><td>        1 - In Genesim</td>
-<td>Cornelius a Lapide</td>
-<td>A4</td>
-<td>Latin</td>
-<td>20.12</td>
-<td>577</td>
-</tr>
-<tr class="table-info"><td>    In prophetas minores</td>
-<td>Cornelius a Lapide</td>
-<td>/</td>
-<td>/</td>
-<td>21.01</td>
-<td>758</td>
-</tr>
-<tr class='table-light'><td>        In prophetas minores 2</td>
-<td>Cornelius a Lapide</td>
-<td>A4</td>
-<td>Latin</td>
-<td>10.4</td>
-<td>374</td>
-</tr>
-<tr class='table-light'><td>        In prophetas minores 1</td>
-<td>Cornelius a Lapide</td>
-<td>A4</td>
-<td>Latin</td>
-<td>10.61</td>
-<td>384</td>
-</tr>
-<tr class="table-info"><td>    In prophetas majores</td>
-<td>Cornelius a Lapide</td>
-<td>/</td>
-<td>/</td>
-<td>36.94</td>
-<td>1273</td>
-</tr>
-<tr class='table-light'><td>        In prophetas majores D - in Danielem</td>
-<td>Cornelius a Lapide</td>
-<td>A4</td>
-<td>Latin</td>
-<td>7.49</td>
-<td>235</td>
-</tr>
-<tr class='table-light'><td>        In prophetae majores C - in Ezechielem</td>
-<td>Cornelius a Lapide</td>
-<td>A4</td>
-<td>Latin</td>
-<td>8.03</td>
-<td>261</td>
-</tr>
-<tr class='table-light'><td>        In prophetas majores B - in Jeremiam</td>
-<td>Cornelius a Lapide</td>
-<td>A4</td>
-<td>Latin</td>
-<td>8.6</td>
-<td>288</td>
-</tr>
-<tr class='table-light'><td>        In prophetas majores A - in Isaiam</td>
-<td>Cornelius a Lapide</td>
-<td>A4</td>
-<td>Latin</td>
-<td>12.82</td>
-<td>489</td>
-</tr>
-<tr class="table-info"><td>Liber Sacramentorum</td>
-<td>Schuster</td>
-<td>/</td>
-<td>/</td>
-<td>20.64</td>
-<td>859</td>
-</tr>
-<tr class='table-light'><td>    Liber Sacramentorum 1</td>
-<td>Schuster</td>
-<td>A5</td>
-<td>Français</td>
-<td>6.83</td>
-<td>283</td>
-</tr>
-<tr class='table-light'><td>    Liber Sacramentorum 3</td>
-<td>Schuster</td>
-<td>A5</td>
-<td>Français</td>
-<td>7.29</td>
-<td>312</td>
-</tr>
-<tr class='table-light'><td>    Liber sacramentorum 2</td>
-<td>Schuster</td>
-<td>A5</td>
-<td>Français</td>
-<td>6.52</td>
-<td>264</td>
-</tr>
-<tr class='table-light'><td>Improvisation on the organ</td>
-<td>Schouten</td>
-<td>A5</td>
-<td>Anglais</td>
-<td>5.62</td>
-<td>70</td>
-</tr>
-<tr class='table-light'><td>Œuvres</td>
-<td>Sainte Mechthilde</td>
+<tr class='table-light'><td>    Catena Aurea - 2</td>
+<td>Saint Thomas d'Aquin</td>
 <td>A5</td>
 <td>Latin</td>
-<td>10.92</td>
-<td>539</td>
+<td>10.72</td>
+<td>526</td>
 </tr>
-<tr class='table-light'><td>Denzinger</td>
-<td>Denzinger</td>
-<td>A4</td>
+<tr class='table-light'><td>    Catena Aurea - 3</td>
+<td>Saint Thomas d'Aquin</td>
+<td>A5</td>
 <td>Latin</td>
-<td>10.97</td>
-<td>401</td>
+<td>9.56</td>
+<td>454</td>
+</tr>
+<tr class='table-light'><td>    Catena Aurea - 4</td>
+<td>Saint Thomas d'Aquin</td>
+<td>A5</td>
+<td>Latin</td>
+<td>9.79</td>
+<td>468</td>
+</tr>
+<tr class='table-light'><td>    Catena Aurea - 5</td>
+<td>Saint Thomas d'Aquin</td>
+<td>A5</td>
+<td>Latin</td>
+<td>10.48</td>
+<td>511</td>
+</tr>
+<tr class='table-light'><td>    Catena Aurea - 6</td>
+<td>Saint Thomas d'Aquin</td>
+<td>A5</td>
+<td>Latin</td>
+<td>11.36</td>
+<td>566</td>
+</tr>
+<tr class='table-light'><td>    Catena Aurea - 7</td>
+<td>Saint Thomas d'Aquin</td>
+<td>A5</td>
+<td>Latin</td>
+<td>10.25</td>
+<td>497</td>
+</tr>
+<tr class='table-light'><td>    Catena Aurea - 8</td>
+<td>Saint Thomas d'Aquin</td>
+<td>A5</td>
+<td>Latin</td>
+<td>9.8</td>
+<td>469</td>
+</tr>
+<tr class='table-light'><td>    Catena Aurea 1</td>
+<td>Saint Thomas d'Aquin</td>
+<td>A5</td>
+<td>Latin</td>
+<td>10.52</td>
+<td>514</td>
 </tr>
 <tr class="table-info"><td>Commentaire de la Sainte Écriture</td>
 <td>Monléon</td>
@@ -314,19 +141,26 @@
 <td>42.74</td>
 <td>1809</td>
 </tr>
-<tr class='table-light'><td>    Le Sens mystique de l'Apocalypse</td>
-<td>Monléon</td>
-<td>Pocket Book</td>
-<td>Français</td>
-<td>8.84</td>
-<td>409</td>
-</tr>
 <tr class="table-info"><td>    Histoire Sainte</td>
 <td>Monléon</td>
 <td>/</td>
 <td>/</td>
 <td>33.9</td>
 <td>1400</td>
+</tr>
+<tr class='table-light'><td>        1 - Les Patriarches</td>
+<td>Monléon</td>
+<td>A5</td>
+<td>Français</td>
+<td>7.74</td>
+<td>340</td>
+</tr>
+<tr class='table-light'><td>        2 - Moise</td>
+<td>Monléon</td>
+<td>A5</td>
+<td>Français</td>
+<td>7.1</td>
+<td>300</td>
 </tr>
 <tr class='table-light'><td>        3 - Josué - Les Juges</td>
 <td>Monléon</td>
@@ -342,20 +176,6 @@
 <td>7.1</td>
 <td>300</td>
 </tr>
-<tr class='table-light'><td>        2 - Moise</td>
-<td>Monléon</td>
-<td>A5</td>
-<td>Français</td>
-<td>7.1</td>
-<td>300</td>
-</tr>
-<tr class='table-light'><td>        1 - Les Patriarches</td>
-<td>Monléon</td>
-<td>A5</td>
-<td>Français</td>
-<td>7.74</td>
-<td>340</td>
-</tr>
 <tr class='table-light'><td>        5 - Daniel - Jonas</td>
 <td>Monléon</td>
 <td>A5</td>
@@ -363,19 +183,138 @@
 <td>6.14</td>
 <td>240</td>
 </tr>
-<tr class='table-light'><td>L'Organiste improvisateur</td>
-<td>Paul Wachs</td>
-<td>A5</td>
+<tr class='table-light'><td>    Le Sens mystique de l'Apocalypse</td>
+<td>Monléon</td>
+<td>Pocket Book</td>
 <td>Français</td>
-<td>5.7</td>
-<td>75</td>
+<td>8.84</td>
+<td>409</td>
 </tr>
-<tr class='table-light'><td>Octavius</td>
-<td>Minucius Felix</td>
-<td>A5</td>
+<tr class="table-info"><td>Commentaria in Sacram Scripturam</td>
+<td>Cornelius a Lapide</td>
+<td>/</td>
+<td>/</td>
+<td>127.73</td>
+<td>4487</td>
+</tr>
+<tr class="table-info"><td>    In Pentateuchum</td>
+<td>Cornelius a Lapide</td>
+<td>/</td>
+<td>/</td>
+<td>45.76</td>
+<td>1555</td>
+</tr>
+<tr class='table-light'><td>        1 - In Genesim</td>
+<td>Cornelius a Lapide</td>
+<td>A4</td>
 <td>Latin</td>
-<td>4.46</td>
-<td>135</td>
+<td>20.12</td>
+<td>577</td>
+</tr>
+<tr class='table-light'><td>        2 - In Exodum</td>
+<td>Cornelius a Lapide</td>
+<td>A4</td>
+<td>Latin</td>
+<td>9.73</td>
+<td>342</td>
+</tr>
+<tr class='table-light'><td>        3 - In Numeros, Leviticum et Deuteronomum</td>
+<td>Cornelius a Lapide</td>
+<td>A4</td>
+<td>Latin</td>
+<td>15.91</td>
+<td>636</td>
+</tr>
+<tr class="table-info"><td>    In prophetas majores</td>
+<td>Cornelius a Lapide</td>
+<td>/</td>
+<td>/</td>
+<td>36.94</td>
+<td>1273</td>
+</tr>
+<tr class='table-light'><td>        In prophetae majores C - in Ezechielem</td>
+<td>Cornelius a Lapide</td>
+<td>A4</td>
+<td>Latin</td>
+<td>8.03</td>
+<td>261</td>
+</tr>
+<tr class='table-light'><td>        In prophetas majores A - in Isaiam</td>
+<td>Cornelius a Lapide</td>
+<td>A4</td>
+<td>Latin</td>
+<td>12.82</td>
+<td>489</td>
+</tr>
+<tr class='table-light'><td>        In prophetas majores B - in Jeremiam</td>
+<td>Cornelius a Lapide</td>
+<td>A4</td>
+<td>Latin</td>
+<td>8.6</td>
+<td>288</td>
+</tr>
+<tr class='table-light'><td>        In prophetas majores D - in Danielem</td>
+<td>Cornelius a Lapide</td>
+<td>A4</td>
+<td>Latin</td>
+<td>7.49</td>
+<td>235</td>
+</tr>
+<tr class="table-info"><td>    In prophetas minores</td>
+<td>Cornelius a Lapide</td>
+<td>/</td>
+<td>/</td>
+<td>21.01</td>
+<td>758</td>
+</tr>
+<tr class='table-light'><td>        In prophetas minores 1</td>
+<td>Cornelius a Lapide</td>
+<td>A4</td>
+<td>Latin</td>
+<td>10.61</td>
+<td>384</td>
+</tr>
+<tr class='table-light'><td>        In prophetas minores 2</td>
+<td>Cornelius a Lapide</td>
+<td>A4</td>
+<td>Latin</td>
+<td>10.4</td>
+<td>374</td>
+</tr>
+<tr class="table-info"><td>    Livres historiques</td>
+<td>Cornelius a Lapide</td>
+<td>/</td>
+<td>/</td>
+<td>24.02</td>
+<td>901</td>
+</tr>
+<tr class='table-light'><td>        I</td>
+<td>Cornelius a Lapide</td>
+<td>A4</td>
+<td>Latin</td>
+<td>12.17</td>
+<td>458</td>
+</tr>
+<tr class='table-light'><td>        II</td>
+<td>Cornelius a Lapide</td>
+<td>A4</td>
+<td>Latin</td>
+<td>11.85</td>
+<td>443</td>
+</tr>
+<tr class='table-light'><td>Denzinger</td>
+<td>Denzinger</td>
+<td>A4</td>
+<td>Latin</td>
+<td>10.97</td>
+<td>401</td>
+</tr>
+<tr class='table-light'><td>Explication de la Grand'messe de paroisse</td>
+<td>Olier</td>
+<td>Pocket Book</td>
+<td>Français</td>
+<td>11.64</td>
+<td>584</td>
 </tr>
 <tr class="table-info"><td>Explication de la messe</td>
 <td>Lebrun</td>
@@ -383,13 +322,6 @@
 <td>/</td>
 <td>47.84</td>
 <td>2415</td>
-</tr>
-<tr class='table-light'><td>    Explication de la messe 1</td>
-<td>Lebrun</td>
-<td>A5</td>
-<td>Latin</td>
-<td>12.92</td>
-<td>664</td>
 </tr>
 <tr class='table-light'><td>    Explication de la messe - 2</td>
 <td>Lebrun</td>
@@ -405,26 +337,19 @@
 <td>10.99</td>
 <td>543</td>
 </tr>
+<tr class='table-light'><td>    Explication de la messe 1</td>
+<td>Lebrun</td>
+<td>A5</td>
+<td>Latin</td>
+<td>12.92</td>
+<td>664</td>
+</tr>
 <tr class='table-light'><td>    Explication de la messe 3</td>
 <td>Lebrun</td>
 <td>A5</td>
 <td>Français</td>
 <td>12.25</td>
 <td>622</td>
-</tr>
-<tr class='table-light'><td>Le Sacré-Cœur insigne du combattant vendéen</td>
-<td>Crosefinte</td>
-<td>A4</td>
-<td>Français</td>
-<td>9.61</td>
-<td>168</td>
-</tr>
-<tr class='table-light'><td>Explication de la Grand'messe de paroisse</td>
-<td>Olier</td>
-<td>Pocket Book</td>
-<td>Français</td>
-<td>11.64</td>
-<td>584</td>
 </tr>
 <tr class="table-info"><td>Graduale Romanum</td>
 <td>Anonyme</td>
@@ -454,33 +379,19 @@
 <td>13.8</td>
 <td>431</td>
 </tr>
-<tr class='table-light'><td>Manuel d'accompagnement du plain-chant grégorien</td>
-<td>Marcel Dupré</td>
+<tr class='table-light'><td>Improvisation on the organ</td>
+<td>Schouten</td>
+<td>A5</td>
+<td>Anglais</td>
+<td>5.62</td>
+<td>70</td>
+</tr>
+<tr class='table-light'><td>L'Organiste improvisateur</td>
+<td>Paul Wachs</td>
 <td>A5</td>
 <td>Français</td>
-<td>5.43</td>
-<td>58</td>
-</tr>
-<tr class='table-light'><td>Martyrologium Romanum</td>
-<td>Anonyme</td>
-<td>A5</td>
-<td>Latin</td>
-<td>19.55</td>
-<td>539</td>
-</tr>
-<tr class='table-light'><td>Œuvres</td>
-<td>Sainte Catherine de Gênes</td>
-<td>A5</td>
-<td>Latin</td>
-<td>10.78</td>
-<td>530</td>
-</tr>
-<tr class='table-light'><td>Œuvres</td>
-<td>Saint Denis l'Aréopagyte</td>
-<td>A5</td>
-<td>Français</td>
-<td>10.73</td>
-<td>527</td>
+<td>5.7</td>
+<td>75</td>
 </tr>
 <tr class="table-info"><td>La Sainte Bible selon la Vulgate</td>
 <td>Fillion</td>
@@ -573,41 +484,6 @@
 <td>60.74</td>
 <td>2790</td>
 </tr>
-<tr class="table-info"><td>        Évangiles</td>
-<td>Fillion</td>
-<td>/</td>
-<td>/</td>
-<td>36.11</td>
-<td>1682</td>
-</tr>
-<tr class='table-light'><td>            Saint Matthieu</td>
-<td>Fillion</td>
-<td>A5</td>
-<td>Latin</td>
-<td>11.4</td>
-<td>569</td>
-</tr>
-<tr class='table-light'><td>            Saint Marc</td>
-<td>Fillion</td>
-<td>A5</td>
-<td>Latin</td>
-<td>6.04</td>
-<td>234</td>
-</tr>
-<tr class='table-light'><td>            Saint Luc</td>
-<td>Fillion</td>
-<td>A5</td>
-<td>Latin</td>
-<td>9.07</td>
-<td>423</td>
-</tr>
-<tr class='table-light'><td>            4 - Saint Jean</td>
-<td>Fillion</td>
-<td>A5</td>
-<td>Latin</td>
-<td>9.6</td>
-<td>456</td>
-</tr>
 <tr class='table-light'><td>        Les Actes des Apôtres</td>
 <td>Fillion</td>
 <td>A5</td>
@@ -635,6 +511,160 @@
 <td>Latin</td>
 <td>9.31</td>
 <td>438</td>
+</tr>
+<tr class="table-info"><td>        Évangiles</td>
+<td>Fillion</td>
+<td>/</td>
+<td>/</td>
+<td>36.11</td>
+<td>1682</td>
+</tr>
+<tr class='table-light'><td>            4 - Saint Jean</td>
+<td>Fillion</td>
+<td>A5</td>
+<td>Latin</td>
+<td>9.6</td>
+<td>456</td>
+</tr>
+<tr class='table-light'><td>            Saint Luc</td>
+<td>Fillion</td>
+<td>A5</td>
+<td>Latin</td>
+<td>9.07</td>
+<td>423</td>
+</tr>
+<tr class='table-light'><td>            Saint Marc</td>
+<td>Fillion</td>
+<td>A5</td>
+<td>Latin</td>
+<td>6.04</td>
+<td>234</td>
+</tr>
+<tr class='table-light'><td>            Saint Matthieu</td>
+<td>Fillion</td>
+<td>A5</td>
+<td>Latin</td>
+<td>11.4</td>
+<td>569</td>
+</tr>
+<tr class='table-light'><td>Le Sacré-Cœur insigne du combattant vendéen</td>
+<td>Crosefinte</td>
+<td>A4</td>
+<td>Français</td>
+<td>9.61</td>
+<td>168</td>
+</tr>
+<tr class="table-info"><td>Liber Sacramentorum</td>
+<td>Schuster</td>
+<td>/</td>
+<td>/</td>
+<td>20.64</td>
+<td>859</td>
+</tr>
+<tr class='table-light'><td>    Liber Sacramentorum 1</td>
+<td>Schuster</td>
+<td>A5</td>
+<td>Français</td>
+<td>6.83</td>
+<td>283</td>
+</tr>
+<tr class='table-light'><td>    Liber Sacramentorum 3</td>
+<td>Schuster</td>
+<td>A5</td>
+<td>Français</td>
+<td>7.29</td>
+<td>312</td>
+</tr>
+<tr class='table-light'><td>    Liber sacramentorum 2</td>
+<td>Schuster</td>
+<td>A5</td>
+<td>Français</td>
+<td>6.52</td>
+<td>264</td>
+</tr>
+<tr class='table-light'><td>Manuel d'accompagnement du plain-chant grégorien</td>
+<td>Marcel Dupré</td>
+<td>A5</td>
+<td>Français</td>
+<td>5.43</td>
+<td>58</td>
+</tr>
+<tr class='table-light'><td>Martyrologium Romanum</td>
+<td>Anonyme</td>
+<td>A5</td>
+<td>Latin</td>
+<td>19.55</td>
+<td>539</td>
+</tr>
+<tr class='table-light'><td>Octavius</td>
+<td>Minucius Felix</td>
+<td>A5</td>
+<td>Latin</td>
+<td>4.46</td>
+<td>135</td>
+</tr>
+<tr class="table-info"><td>Traité d'harmonie</td>
+<td>Kœchlin</td>
+<td>/</td>
+<td>/</td>
+<td>19.37</td>
+<td>470</td>
+</tr>
+<tr class='table-light'><td>    Traité d'Harmonie - Tome 1</td>
+<td>Kœchlin</td>
+<td>A4</td>
+<td>Français</td>
+<td>8.89</td>
+<td>197</td>
+</tr>
+<tr class='table-light'><td>    Traité d'harmonie - Tome 2</td>
+<td>Kœchlin</td>
+<td>A4</td>
+<td>Français</td>
+<td>10.48</td>
+<td>273</td>
+</tr>
+<tr class='table-light'><td>Traité d'improvisation</td>
+<td>Marcel Dupré</td>
+<td>A4</td>
+<td>Français</td>
+<td>5.57</td>
+<td>144</td>
+</tr>
+<tr class='table-light'><td>Traité de Contrepoint</td>
+<td>Gallon & Bitsch</td>
+<td>A5</td>
+<td>Français</td>
+<td>4.19</td>
+<td>118</td>
+</tr>
+<tr class='table-light'><td>Traité de la Fugue</td>
+<td>Gedalge</td>
+<td>A4</td>
+<td>Français</td>
+<td>10.76</td>
+<td>391</td>
+</tr>
+<tr class='table-light'><td>Œuvres</td>
+<td>Sainte Mechthilde</td>
+<td>A5</td>
+<td>Latin</td>
+<td>10.92</td>
+<td>539</td>
+</tr>
+<tr class='table-light'><td>Œuvres</td>
+<td>Sainte Catherine de Gênes</td>
+<td>A5</td>
+<td>Latin</td>
+<td>10.78</td>
+<td>530</td>
+</tr>
+<tr class='table-light'><td>Œuvres</td>
+<td>Saint Denis l'Aréopagyte</td>
+<td>A5</td>
+<td>Français</td>
+<td>10.73</td>
+<td>527</td>
 </tr>
 </tbody></table>
 
