--- a/table.html
+++ b/table.html
@@ -16,6 +16,13 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+<style>
+/* https://css-tricks.com/position-sticky-and-table-headers/ */
+th {{
+    position: sticky;
+    top: 0;
+}}
+</style>
   </head>
   <body>
     <h1>Livres réimprimés chez Lulu</h1>
@@ -24,12 +31,15 @@
         <div class="card-body">
             <h5 class="card-title">Comment lire le tableau</h5>
             <p class="card-text">
-            Ce tableau contient tous les livres réimprimés chez Lulu. Les lignes en bleu indiquent que le titre contient plusieurs volumes indiqués en-dessous. Le prix et le nombre de pages indiqués ne sont que l'addition des volumes qu'il contient. Attention, certains titres contiennent eux-mêmes d'autres titres contenant plusieurs volumes. Par exemple, la Bible de Fillion est divisée en Ancien Testament et Nouveau Testament, lequel est divisé en évangiles, etc.
+            Ce tableau contient tous les livres réimprimés chez Lulu. Les lignes en bleu indiquent que le titre contient plusieurs volumes indiqués en-dessous. Le prix et le nombre de pages indiqués ne sont que l'addition des volumes qu'il contient. Attention, certains titres contiennent eux-mêmes d'autres titres contenant plusieurs volumes. Par exemple, la Bible de Fillion est divisée en Ancien Testament et Nouveau Testament, lequel est divisé en évangiles, etc. <br>
             Toute suggestion ou remarque est bienvenue.
             </p>
         </div>
     </div>
-    {}
+    <div class="alert alert-warning" role="alert">
+        Dernière modification : {modif_time}
+    </div>
+    {table}
 
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
