Added missale romanum

--- a/out.html
+++ b/out.html
@@ -37,7 +37,7 @@ th {
         </div>
     </div>
     <div class="alert alert-warning" role="alert">
-        Dernière modification : 16/05/2022
+        Dernière modification : 22/05/2022
     </div>
     
 <table class="table table-hover">
@@ -638,6 +638,27 @@ th {
 <td>Latin</td>
 <td>19.55</td>
 <td>539</td>
+</tr>
+<tr class="table-info"><td>Missale Romanum 1920</td>
+<td>Anonyme</td>
+<td>/</td>
+<td>/</td>
+<td>61.79</td>
+<td>1220</td>
+</tr>
+<tr class='table-light'><td>    Volume 1</td>
+<td>Anonyme</td>
+<td>A4</td>
+<td>Latin</td>
+<td>26.95</td>
+<td>581</td>
+</tr>
+<tr class='table-light'><td>    Volume 2</td>
+<td>Anonyme</td>
+<td>A4</td>
+<td>Latin</td>
+<td>34.84</td>
+<td>639</td>
 </tr>
 <tr class='table-light'><td>Octavius</td>
 <td>Minucius Felix</td>
