--- a/out.html
+++ b/out.html
@@ -37,7 +37,7 @@ th {
         </div>
     </div>
     <div class="alert alert-warning" role="alert">
-        Dernière modification : 22/05/2022
+        Dernière modification : 29/05/2022
     </div>
     
 <table class="table table-hover">
@@ -195,8 +195,8 @@ th {
 <td>Cornelius a Lapide</td>
 <td>/</td>
 <td>/</td>
-<td>201.58</td>
-<td>7397</td>
+<td>281.13</td>
+<td>10456</td>
 </tr>
 <tr class="table-info"><td>    01/2/3 - In Pentateuchum</td>
 <td>Cornelius a Lapide</td>
@@ -344,6 +344,69 @@ th {
 <td>Latin</td>
 <td>13.03</td>
 <td>499</td>
+</tr>
+<tr class="table-info"><td>    17/18 - In Evangelia</td>
+<td>Cornelius a Lapide</td>
+<td>/</td>
+<td>/</td>
+<td>26.27</td>
+<td>1008</td>
+</tr>
+<tr class='table-light'><td>        In SS Lucam et Johannem</td>
+<td>Cornelius a Lapide</td>
+<td>A4</td>
+<td>Latin</td>
+<td>13.64</td>
+<td>528</td>
+</tr>
+<tr class='table-light'><td>        In SS Matthæum et Marcum</td>
+<td>Cornelius a Lapide</td>
+<td>A4</td>
+<td>Latin</td>
+<td>12.63</td>
+<td>480</td>
+</tr>
+<tr class="table-info"><td>    19/20 - In Epistolas Sancti Pauli</td>
+<td>Cornelius a Lapide</td>
+<td>/</td>
+<td>/</td>
+<td>24.09</td>
+<td>904</td>
+</tr>
+<tr class='table-light'><td>        In Epistolas Sancti Pauli I</td>
+<td>Cornelius a Lapide</td>
+<td>A4</td>
+<td>Latin</td>
+<td>12.17</td>
+<td>458</td>
+</tr>
+<tr class='table-light'><td>        In Epistolas Sancti Pauli II</td>
+<td>Cornelius a Lapide</td>
+<td>A4</td>
+<td>Latin</td>
+<td>11.92</td>
+<td>446</td>
+</tr>
+<tr class="table-info"><td>    21/22 - In Epistolas SS Petri, Judæ, Jacobi et Johannis et in Apocalypsin</td>
+<td>Cornelius a Lapide</td>
+<td>/</td>
+<td>/</td>
+<td>29.19</td>
+<td>1147</td>
+</tr>
+<tr class='table-light'><td>        In Epistolas SS Judæ et Johannis et in Apocalypsin</td>
+<td>Cornelius a Lapide</td>
+<td>A4</td>
+<td>Latin</td>
+<td>13.3</td>
+<td>512</td>
+</tr>
+<tr class='table-light'><td>        In Epistolas SS Petri et Jacobi</td>
+<td>Cornelius a Lapide</td>
+<td>A4</td>
+<td>Latin</td>
+<td>15.89</td>
+<td>635</td>
 </tr>
 <tr class='table-light'><td>Denzinger</td>
 <td>Denzinger</td>
