Added psaumes de St Augustin

--- a/out.html
+++ b/out.html
@@ -37,7 +37,7 @@ th {
         </div>
     </div>
     <div class="alert alert-warning" role="alert">
-        Dernière modification : 29/05/2022
+        Dernière modification : 13/07/2022
     </div>
     
 <table class="table table-hover">
@@ -414,6 +414,48 @@ th {
 <td>Latin</td>
 <td>10.97</td>
 <td>401</td>
+</tr>
+<tr class="table-info"><td>Discours sur les Psaumes</td>
+<td>Saint Augustin</td>
+<td>/</td>
+<td>/</td>
+<td>77.96</td>
+<td>3105</td>
+</tr>
+<tr class='table-light'><td>    Discours sur les Psaumes 1 à 30</td>
+<td>Saint Augustin</td>
+<td>Executive</td>
+<td>Latin</td>
+<td>9.33</td>
+<td>323</td>
+</tr>
+<tr class='table-light'><td>    Discours sur les Psaumes 120 à 150</td>
+<td>Saint Augustin</td>
+<td>Executive</td>
+<td>Latin</td>
+<td>17.38</td>
+<td>706</td>
+</tr>
+<tr class='table-light'><td>    Discours sur les Psaumes 31 à 58</td>
+<td>Saint Augustin</td>
+<td>Executive</td>
+<td>Latin</td>
+<td>17.0</td>
+<td>688</td>
+</tr>
+<tr class='table-light'><td>    Discours sur les Psaumes 59 à 90</td>
+<td>Saint Augustin</td>
+<td>Executive</td>
+<td>Latin</td>
+<td>17.21</td>
+<td>698</td>
+</tr>
+<tr class='table-light'><td>    Discours sur les Psaumes 91 à 119</td>
+<td>Saint Augustin</td>
+<td>Executive</td>
+<td>Latin</td>
+<td>17.04</td>
+<td>690</td>
 </tr>
 <tr class='table-light'><td>Explication de la Grand'messe de paroisse</td>
 <td>Olier</td>
