--- a/out.html
+++ b/out.html
@@ -37,7 +37,7 @@ th {
         </div>
     </div>
     <div class="alert alert-warning" role="alert">
-        Dernière modification : 13/07/2022
+        Dernière modification : 14/09/2022
     </div>
     
 <table class="table table-hover">
@@ -771,6 +771,13 @@ th {
 <td>Latin</td>
 <td>4.46</td>
 <td>135</td>
+</tr>
+<tr class='table-light'><td>Traité d'Harmonie</td>
+<td>Théodore Dubois</td>
+<td>A4</td>
+<td>Français</td>
+<td>10.13</td>
+<td>256</td>
 </tr>
 <tr class="table-info"><td>Traité d'harmonie</td>
 <td>Kœchlin</td>
