Graduels, alleluias et traits

--- a/out.html
+++ b/out.html
@@ -37,7 +37,7 @@ th {
         </div>
     </div>
     <div class="alert alert-warning" role="alert">
-        Dernière modification : 14/09/2022
+        Dernière modification : 21/09/2022
     </div>
     
 <table class="table table-hover">
@@ -526,6 +526,13 @@ th {
 <td>Latin</td>
 <td>13.8</td>
 <td>431</td>
+</tr>
+<tr class='table-light'><td>Graduels, versets de l'Alleluia et Traits</td>
+<td>Anonyme</td>
+<td>Digest</td>
+<td>Français</td>
+<td>9.14</td>
+<td>290</td>
 </tr>
 <tr class='table-light'><td>Improvisation on the organ</td>
 <td>Schouten</td>
