Traité de l'oraison Monléon

--- a/out.html
+++ b/out.html
@@ -37,7 +37,7 @@ th {
         </div>
     </div>
     <div class="alert alert-warning" role="alert">
-        Dernière modification : 21/09/2022
+        Dernière modification : 08/10/2022
     </div>
     
 <table class="table table-hover">
@@ -820,6 +820,13 @@ th {
 <td>Français</td>
 <td>4.19</td>
 <td>118</td>
+</tr>
+<tr class='table-light'><td>Traité de l'Oraison</td>
+<td>Dom de Monléon</td>
+<td>Pocket</td>
+<td>Français</td>
+<td>4.78</td>
+<td>155</td>
 </tr>
 <tr class='table-light'><td>Traité de la Fugue</td>
 <td>Gedalge</td>
