--- a/out.html
+++ b/out.html
@@ -37,7 +37,7 @@ th {
         </div>
     </div>
     <div class="alert alert-warning" role="alert">
-        Dernière modification : 08/10/2022
+        Dernière modification : 15/01/2023
     </div>
     
 <table class="table table-hover">
@@ -709,6 +709,13 @@ th {
 <td>9.61</td>
 <td>168</td>
 </tr>
+<tr class='table-light'><td>Les Instruments de la perfection</td>
+<td>Monléon</td>
+<td></td>
+<td>Français</td>
+<td>10.78</td>
+<td>472</td>
+</tr>
 <tr class="table-info"><td>Liber Sacramentorum</td>
 <td>Schuster</td>
 <td>/</td>
@@ -778,6 +785,13 @@ th {
 <td>Latin</td>
 <td>4.46</td>
 <td>135</td>
+</tr>
+<tr class='table-light'><td>Théologie Morale</td>
+<td>Abbé Vittrant</td>
+<td>Digest</td>
+<td>Français</td>
+<td>13.44</td>
+<td>624</td>
 </tr>
 <tr class='table-light'><td>Traité d'Harmonie</td>
 <td>Théodore Dubois</td>
