--- a/out.html
+++ b/out.html
@@ -711,7 +711,7 @@ th {
 </tr>
 <tr class='table-light'><td>Les Instruments de la perfection</td>
 <td>Monléon</td>
-<td></td>
+<td>US Trade</td>
 <td>Français</td>
 <td>10.78</td>
 <td>472</td>
