Ajout: Lottin, trois livres

--- a/out.html
+++ b/out.html
@@ -37,7 +37,7 @@ th {
         </div>
     </div>
     <div class="alert alert-warning" role="alert">
-        Dernière modification : 17/01/2023
+        Dernière modification : 10/02/2024
     </div>
     
 <table class="table table-hover">
@@ -786,12 +786,40 @@ th {
 <td>34.84</td>
 <td>639</td>
 </tr>
+<tr class='table-light'><td>Morale fondamentale</td>
+<td>Lottin</td>
+<td>Digest</td>
+<td>Français</td>
+<td>12.2</td>
+<td>553</td>
+</tr>
 <tr class='table-light'><td>Octavius</td>
 <td>Minucius Felix</td>
 <td>A5</td>
 <td>Latin</td>
 <td>4.46</td>
 <td>135</td>
+</tr>
+<tr class="table-info"><td>Principes de morale</td>
+<td>Lottin</td>
+<td>/</td>
+<td>/</td>
+<td>15.65</td>
+<td>606</td>
+</tr>
+<tr class='table-light'><td>    Principes de morale - 1</td>
+<td>Lottin</td>
+<td>Digest</td>
+<td>Français</td>
+<td>8.37</td>
+<td>334</td>
+</tr>
+<tr class='table-light'><td>    Principes de morale - 2</td>
+<td>Lottin</td>
+<td>Digest</td>
+<td>Français</td>
+<td>7.28</td>
+<td>272</td>
 </tr>
 <tr class='table-light'><td>Théologie Morale</td>
 <td>Abbé Vittrant</td>
