Ajout de livres de mgr de Ségur

--- a/out.html
+++ b/out.html
@@ -37,7 +37,7 @@ th {
         </div>
     </div>
     <div class="alert alert-warning" role="alert">
-        Dernière modification : 10/02/2024
+        Dernière modification : 29/09/2024
     </div>
     
 <table class="table table-hover">
@@ -555,6 +555,13 @@ th {
 <td>5.7</td>
 <td>75</td>
 </tr>
+<tr class='table-light'><td>La Confession</td>
+<td>Mgr de Ségur</td>
+<td>Pocket</td>
+<td>Français</td>
+<td>3.73</td>
+<td>71</td>
+</tr>
 <tr class="table-info"><td>La Sainte Bible selon la Vulgate</td>
 <td>Fillion</td>
 <td>/</td>
@@ -722,6 +729,13 @@ th {
 <td>Français</td>
 <td>10.78</td>
 <td>472</td>
+</tr>
+<tr class='table-light'><td>Les trois roses des élus</td>
+<td>Mgr de Ségur</td>
+<td>Pocket</td>
+<td>Français</td>
+<td>5.51</td>
+<td>171</td>
 </tr>
 <tr class="table-info"><td>Liber Sacramentorum</td>
 <td>Schuster</td>
@@ -904,6 +918,13 @@ th {
 <td>Français</td>
 <td>10.73</td>
 <td>527</td>
+</tr>
+<tr class='table-light'><td>Œuvres complètes volume 4</td>
+<td>Mgr de Ségur</td>
+<td>Executive</td>
+<td>Français</td>
+<td>17.26</td>
+<td>629</td>
 </tr>
 </tbody></table>
 
