--- a/out.html
+++ b/out.html
@@ -37,7 +37,7 @@ th {
         </div>
     </div>
     <div class="alert alert-warning" role="alert">
-        Dernière modification : 29/09/2024
+        Dernière modification : 11/11/2024
     </div>
     
 <table class="table table-hover">
@@ -834,6 +834,27 @@ th {
 <td>Français</td>
 <td>7.28</td>
 <td>272</td>
+</tr>
+<tr class="table-info"><td>Précis de théologie dogmatique</td>
+<td>Bernard Bartmann</td>
+<td>/</td>
+<td>/</td>
+<td>32.05</td>
+<td>1151</td>
+</tr>
+<tr class='table-light'><td>    Volume 1</td>
+<td>Bernard Bartmann</td>
+<td>A4</td>
+<td>Français</td>
+<td>15.44</td>
+<td>550</td>
+</tr>
+<tr class='table-light'><td>    Volume 2</td>
+<td>Bernard Bartmann</td>
+<td>A4</td>
+<td>Français</td>
+<td>16.61</td>
+<td>601</td>
 </tr>
 <tr class='table-light'><td>Théologie Morale</td>
 <td>Abbé Vittrant</td>
