--- a/out.html
+++ b/out.html
@@ -37,7 +37,7 @@ th {
         </div>
     </div>
     <div class="alert alert-warning" role="alert">
-        Dernière modification : 11/11/2024
+        Dernière modification : 15/11/2024
     </div>
     
 <table class="table table-hover">
@@ -561,6 +561,13 @@ th {
 <td>Français</td>
 <td>3.73</td>
 <td>71</td>
+</tr>
+<tr class='table-light'><td>La Grande Vie de Jésus-Christ - Tome 1</td>
+<td>Ludolphe le chartreux</td>
+<td>US Trade</td>
+<td>Français</td>
+<td>12.25</td>
+<td>556</td>
 </tr>
 <tr class="table-info"><td>La Sainte Bible selon la Vulgate</td>
 <td>Fillion</td>
