--- a/out.html
+++ b/out.html
@@ -37,7 +37,7 @@ th {
         </div>
     </div>
     <div class="alert alert-warning" role="alert">
-        Dernière modification : 15/11/2024
+        Dernière modification : 16/11/2024
     </div>
     
 <table class="table table-hover">
@@ -562,12 +562,26 @@ th {
 <td>3.73</td>
 <td>71</td>
 </tr>
-<tr class='table-light'><td>La Grande Vie de Jésus-Christ - Tome 1</td>
+<tr class="table-info"><td>La Grande Vie de Jésus-Christ</td>
+<td>Ludolphe le chartreux</td>
+<td>/</td>
+<td>/</td>
+<td>24.2</td>
+<td>1095</td>
+</tr>
+<tr class='table-light'><td>    Tome 1</td>
 <td>Ludolphe le chartreux</td>
 <td>US Trade</td>
 <td>Français</td>
 <td>12.25</td>
 <td>556</td>
+</tr>
+<tr class='table-light'><td>    Tome 2</td>
+<td>Ludolphe le chartreux</td>
+<td>US Trade</td>
+<td>Français</td>
+<td>11.95</td>
+<td>539</td>
 </tr>
 <tr class="table-info"><td>La Sainte Bible selon la Vulgate</td>
 <td>Fillion</td>
