--- a/out.html
+++ b/out.html
@@ -37,7 +37,7 @@ th {
         </div>
     </div>
     <div class="alert alert-warning" role="alert">
-        Dernière modification : 02/05/2025
+        Dernière modification : 29/06/2025
     </div>
     
 <table class="table table-hover">
@@ -547,6 +547,13 @@ th {
 <td>Anglais</td>
 <td>5.62</td>
 <td>70</td>
+</tr>
+<tr class='table-light'><td>Initiation à la logique</td>
+<td>Mgr Maurice Dionne</td>
+<td>A4</td>
+<td>Français</td>
+<td>12.5</td>
+<td>317</td>
 </tr>
 <tr class='table-light'><td>L'Organiste improvisateur</td>
 <td>Paul Wachs</td>
